--- a/conf/config.toml
+++ b/conf/config.toml
@@ -4,7 +4,6 @@ addr = "127.0.0.1:1234"
 advertise-addr = ""
 etcd-addrs = ["127.0.0.1:2379"]
 http-addr = ":9090"
-pprof-addr = ":6060"
 root = "/pd"
 lease = 3
 log-level = "debug"
@@ -26,3 +25,17 @@ max-balance-count = 16
 max-balance-retry-per-loop = 10
 max-balance-count-per-loop = 3
 max-transfer-wait-count = 3
+leader-score-weight = 0.4
+capacity-score-weight = 0.6
+max-transfer-wait-count = 3
+
+[etcd]
+name = "default"
+data-dir = "default.pd"
+wal-dir = ""
+listen-peer-url = "http://localhost:2380"
+listen-client-url = "http://localhost:2379"
+advertise-peer-url = "http://localhost:2380"
+advertise-client-url = "http://localhost:2379"
+initial-cluster = "default=http://locahost:2380"
+initial-cluster-state = "new"
