server: save next tso (#290)
* server: save next tso

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -19,7 +19,7 @@ initial-cluster-state = "new"
 
 lease = 3
 log-level = "info"
-tso-save-interval = 2000
+tso-save-interval = "3s"
 max-peer-count = 3
 
 
