--- a/glide.yaml
+++ b/glide.yaml
@@ -67,6 +67,7 @@ import:
   - version
   - wal
   - wal/walpb
+  - clientv3/concurrency
 - package: github.com/coreos/go-semver
   version: ~0.2.0
   subpackages:
