--- a/conf/config.toml
+++ b/conf/config.toml
@@ -40,3 +40,8 @@ replica-schedule-interval = "1s"
 [replication]
 # The number of replicas for each region.
 max-replicas = 3
+# The label keys specified the location of a store.
+# The placement priorities is implied by the order of label keys.
+# For example, ["zone", "rack"] means that we should place replicas to
+# different zones first, then to different racks if we don't have enough zones.
+location-labels = []
