server: balance according to region count (#506)
* server: balance according to region count

We will adjust the balance speed and threshold according to the leader count and
region count, so that we can remove some dumb configurations.

* server: update diff formula and interval control

* adjust balance limit according to standard deviation

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -25,15 +25,11 @@ interval = "15s"
 address = ""
 
 [schedule]
-min-region-count = 10
-min-leader-count = 10
 max-snapshot-count = 3
-min-balance-diff-ratio = 0.01
-max-store-down-duration = "1h"
-schedule-interval = "5s"
-leader-schedule-limit = 16
-region-schedule-limit = 12
-replica-schedule-limit = 16
+max-store-down-time = "1h"
+leader-schedule-limit = 1024
+region-schedule-limit = 16
+replica-schedule-limit = 24
 
 [replication]
 # The number of replicas for each region.
