Structured log: replace ngaut/log with logrus (#612)

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -15,8 +15,13 @@ initial-cluster = "pd=http://127.0.0.1:2380"
 initial-cluster-state = "new"
 
 lease = 3
-log-level = "info"
 tso-save-interval = "3s"
+
+[log]
+level = "info"
+
+#[log.file]
+#filename = ""
 
 [metric]
 # prometheus client push interval, set "0s" to disable prometheus.
