--- a/glide.yaml
+++ b/glide.yaml
@@ -13,7 +13,7 @@ import:
 - package: github.com/cockroachdb/cmux
   version: 112f0506e7743d64a6eb8fedbcff13d9979bbf92
 - package: github.com/coreos/etcd
-  version: v3.2.4
+  version: v3.2.6
   subpackages:
   - alarm
   - auth
@@ -165,6 +165,8 @@ import:
   subpackages:
   - bcrypt
   - blowfish
+- package: golang.org/x/text
+  version: 836efe42bb4aa16aaa17b9c155d8813d336ed720
 - package: golang.org/x/net
   version: d1e1b351919c6738fdeb9893d5c998b161464f0c
   repo: https://github.com/golang/net.git
@@ -198,6 +200,8 @@ import:
   version: 9495bc009a56819bdb0ddbc1a373e29c140bc674
   repo: https://github.com/spf13/cobra.git
   vcs: git
+- package: github.com/spf13/pflag
+  version: e57e3eeb33f795204c1ca35f56c44f83227c6e66
 - package: github.com/chzyer/readline
   version: c914be64f07d9998f52bf0d598ec26d457168c0f
 - package: github.com/dustin/go-humanize
@@ -211,3 +215,5 @@ import:
   version: v0.11.5
 - package: gopkg.in/natefinch/lumberjack.v2
   version: v2
+- package: google.golang.org/genproto
+  version: b0a3dcfcd1a9bd48e63634bd8802960804cf8315
