schedule, server: persist scheduler list to etcd (#769)
* schudule, server: persist scheduler list to etcd

* server: fix bug that use copy() incorrectly leading to src slice to be empty in clone() of ReplicationConfig

* add test of persist scheduler

* fix dead lock in mustNewCluster

* abandon test of persist-scheduler, amend test of add scheduler

* add Equals method of SchedulerConfig

* clean verbose code

* add comment

* fix typo

* add log

* add test persist-scheduler

* use reflect.DeepEqual instead

* improve test of persist-scheduler and add log

* use meanful argument in config

* auto delete invalid scheduler config

* avoid persist too frequently

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -53,13 +53,9 @@ replica-schedule-limit = 24
 
 # customized schedulers, the format is as below
 # if empty, it will use balance-leader, balance-region, hot-region as default
-[schedule.schedulers]
-# [schedule.schedulers.balance-leader]
-#		
-# [schedule.schedulers.balance-region]
-#		
-# [schedule.schedulers.hot-region]
-
+# [[schedule.schedulers]]
+# type = "evict-leader"
+# args = ["1"]
 		
 	
 [replication]
