--- a/conf/config.toml
+++ b/conf/config.toml
@@ -17,6 +17,14 @@ initial-cluster-state = "new"
 lease = 3
 tso-save-interval = "3s"
 
+[security]
+# Path of file that contains list of trusted SSL CAs. if set, following four settings shouldn't be empty
+cacert-path = ""
+# Path of file that contains X509 certificate in PEM format.
+cert-path = ""
+# Path of file that contains X509 key in PEM format.
+key-path = ""
+
 [log]
 level = "info"
 
@@ -68,3 +76,4 @@ max-replicas = 3
 # For example, ["zone", "rack"] means that we should place replicas to
 # different zones first, then to different racks if we don't have enough zones.
 location-labels = []
+
