--- a/conf/config.toml
+++ b/conf/config.toml
@@ -66,8 +66,7 @@ tolerant-size-ratio = 2.5
 # [[schedule.schedulers]]
 # type = "evict-leader"
 # args = ["1"]
-		
-	
+
 [replication]
 # The number of replicas for each region.
 max-replicas = 3
@@ -77,3 +76,9 @@ max-replicas = 3
 # different zones first, then to different racks if we don't have enough zones.
 location-labels = []
 
+[label-property]
+# Do not assign region leaders to stores that have these tags.
+reject-leader = [
+# { key = "zone", value = "cn1"},
+# { key = "disk", value = "hdd"}
+]
