--- a/conf/config.toml
+++ b/conf/config.toml
@@ -61,7 +61,9 @@ leader-schedule-limit = 4
 region-schedule-limit = 4
 replica-schedule-limit = 8
 merge-schedule-limit = 8
-tolerant-size-ratio = 2.5
+tolerant-size-ratio = 5
+high-space-reatio = 0.8
+low-space-ratio = 0.6
 
 # customized schedulers, the format is as below
 # if empty, it will use balance-leader, balance-region, hot-region as default
