--- a/conf/config.toml
+++ b/conf/config.toml
@@ -17,6 +17,8 @@ initial-cluster-state = "new"
 lease = 3
 tso-save-interval = "3s"
 
+namespace-classifier = "table"
+
 [security]
 # Path of file that contains list of trusted SSL CAs. if set, following four settings shouldn't be empty
 cacert-path = ""
