*: enable prevote by default (#1103)

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -19,6 +19,8 @@ tso-save-interval = "3s"
 
 namespace-classifier = "table"
 
+enable-prevote = true
+
 [security]
 # Path of file that contains list of trusted SSL CAs. if set, following four settings shouldn't be empty
 cacert-path = ""
