--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ matrix:
     env:
       - TRAVIS_COVERAGE=1
     script:
-      - make dev
+      - make ci
     after_success:
       - travis_wait make travis_coverage
