server: use gofail to test time fallback (#1186)
* use gofail to test time fallback

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,3 +27,7 @@
 [[constraint]]
   name = "github.com/pingcap/kvproto"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/etcd-io/gofail"
+  branch = "master"
