*: Improve the performance of the region tree (#1184)

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,5 +29,9 @@
   branch = "master"
 
 [[constraint]]
+  name = "github.com/google/btree"
+  branch = "master"
+
+[[constraint]]
   name = "github.com/etcd-io/gofail"
   branch = "master"
