--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,7 +38,7 @@
 
 [[constraint]]
   name = "github.com/pkg/errors"
-  version = "0.8.0"
+  version = ">= 0.8.0"
 
 [[override]]
   name = "github.com/BurntSushi/toml"
