--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,7 @@
 
 [[constraint]]
   name = "github.com/pingcap/kvproto"
+  source = "https://github.com/pingcap/kvproto.git"
   branch = "master"
 
 [[constraint]]
