--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -18,7 +18,7 @@
 [[constraint]]
   name = "google.golang.org/grpc"
   source = "https://github.com/grpc/grpc-go.git"
-  version = "1.12.0"
+  version = "=1.12.2"
 
 [[constraint]]
   name = "github.com/chzyer/readline"
