integration-test: fix the unstable leader watch test (#1372)
Signed-off-by: nolouch <nolouch@gmail.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,7 +33,7 @@
   branch = "master"
 
 [[constraint]]
-  name = "github.com/etcd-io/gofail"
+  name = "github.com/pingcap/gofail"
   branch = "master"
 
 [[constraint]]
