switch to codecov (#1401)
Signed-off-by: rleungx <rleungx@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,5 @@ matrix:
       - make ci
     after_success:
       - travis_wait make travis_coverage
+      - mv overalls.coverprofile coverage.txt
+      - bash <(curl -s https://codecov.io/bash)
