--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/pingcap/kvproto"
-  branch = "master"
+  branch = "release-2.1"
 
 [[constraint]]
   name = "github.com/google/btree"
