--- a/conf/config.toml
+++ b/conf/config.toml
@@ -67,7 +67,7 @@ leader-schedule-limit = 4
 region-schedule-limit = 1024
 replica-schedule-limit = 1024
 merge-schedule-limit = 8
-tolerant-size-ratio = 0
+#tolerant-size-ratio = 5.0
 
 # customized schedulers, the format is as below
 # if empty, it will use balance-leader, balance-region, hot-region as default
@@ -83,6 +83,8 @@ max-replicas = 3
 # For example, ["zone", "rack"] means that we should place replicas to
 # different zones first, then to different racks if we don't have enough zones.
 location-labels = []
+# Strictly checks if the label of TiKV is matched with location labels.
+#strictly-match-label = false
 
 [label-property]
 # Do not assign region leaders to stores that have these tags.
