--- a/conf/config.toml
+++ b/conf/config.toml
@@ -69,7 +69,7 @@ replica-schedule-limit = 64
 merge-schedule-limit = 8
 #tolerant-size-ratio = 5.0
 # Enable two-way merge, set it to true may help improving merge speed.
-#enable-two-way-merge = false
+#enable-one-way-merge = false
 
 # customized schedulers, the format is as below
 # if empty, it will use balance-leader, balance-region, hot-region as default
