--- a/conf/config.toml
+++ b/conf/config.toml
@@ -67,10 +67,8 @@ leader-schedule-limit = 4
 region-schedule-limit = 64
 replica-schedule-limit = 64
 merge-schedule-limit = 8
-tolerant-size-ratio = 0
-# Enable two-way merge, set it to true may help improving merge speed.
-#enable-two-way-merge = false
-#tolerant-size-ratio = 5.0
+#enable-one-way-merge = false
+#tolerant-size-ratio = 0.0
 
 # customized schedulers, the format is as below
 # if empty, it will use balance-leader, balance-region, hot-region as default
