--- a/conf/config.toml
+++ b/conf/config.toml
@@ -67,6 +67,7 @@ leader-schedule-limit = 4
 region-schedule-limit = 64
 replica-schedule-limit = 64
 merge-schedule-limit = 8
+hot-region-schedule-limit = 4
 #tolerant-size-ratio = 0.0
 #enable-one-way-merge = false
 
