--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,3 +43,11 @@
 [[override]]
   name = "github.com/BurntSushi/toml"
   revision = "3012a1dbe2e4bd1391d42b32f0577cb7bbc7f005"
+
+[[constraint]]
+  name = "github.com/pingcap/log"
+  branch = "master"
+
+[[constraint]]
+  name = "go.uber.org/zap"
+  version = "1.9.1"
