tools: fix bugs in pd-simulator (#1635)
* tools: fix bugs in pd-simulator

* fix crashes in pd-simulator

Signed-off-by: Chengjin <tianchengjin@pingcap.com>

* tools: fix crashes in pd-simulator

Signed-off-by: Chengjin <tianchengjin@pingcap.com>

--- a/conf/simconfig.toml
+++ b/conf/simconfig.toml
@@ -29,3 +29,4 @@ leader-schedule-limit = 32
 region-schedule-limit = 128
 replica-schedule-limit = 32
 merge-schedule-limit = 32
+store-balance-rate = 512.0
