checker: fix replica checker filter (#1660)
* fix replica checker filter

Signed-off-by: Ryan Leung <rleungx@gmail.com>

--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,8 @@ jobs:
     docker:
       - image: golang:1.12
     working_directory: /go/src/github.com/pingcap/pd
+    environment:
+      GOFLAGS: -p=8
     steps:
       - checkout
       - restore_cache:
