*: add query metric http api (#1957)

--- a/conf/config.toml
+++ b/conf/config.toml
@@ -54,6 +54,12 @@ interval = "15s"
 ## prometheus pushgateway address, leaves it empty will disable prometheus.
 address = ""
 
+[pd-server]
+## the metric storage is the cluster metric storage. This is use for query metric data.
+## Currently we use prometheus as metric storage, we may use PD/TiKV as metric storage later.
+## For usability, recommended to temporarily set it to the prometheus address, eg: http://127.0.0.1:9090
+metric-storage = ""
+
 [schedule]
 max-merge-region-size = 20
 max-merge-region-keys = 200000
