--- a/.github/workflows/release-ui-assets.yaml
+++ b/.github/workflows/release-ui-assets.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+          registry-url: 'https://npm.pkg.github.com'
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13.5'
@@ -35,9 +36,15 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+      # Skip post-install scripts by `--ignore-scripts` here,
+      # as a malicious script could steal NODE_AUTH_TOKEN.
+      - name: Yarn install from private registry
+        run: make yarn_dependencies
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build UI
         run: |
-          DASHBOARD_API="/dashboard" make ui
+          SKIP_YARN_INSTALL=1 DASHBOARD_API="/dashboard" make ui
       - name: Pack UI asset release
         working-directory: ui/build
         run: |
