Run GitHub workflow for PRs
Signed-off-by: Breezewish <me@breeswish.org>

--- a/.github/workflows/release-ui-assets.yaml
+++ b/.github/workflows/release-ui-assets.yaml
@@ -4,6 +4,9 @@ on:
       - master
     paths:
       - 'ui/.github_release_version'
+  pull_request:
+    branches:
+      - master
 
 name: Release UI Assets
 
@@ -39,15 +42,18 @@ jobs:
         run: |
           DASHBOARD_API="/dashboard" make ui
       - name: Pack UI asset release
+        if: github.event_name == 'push'
         working-directory: ui/build
         run: |
           zip -r ../static-assets.zip .
       - name: Lookup asset release version
+        if: github.event_name == 'push'
         id: lookup_release_version
         working-directory: ui
         run: |
           echo "::set-output name=release_version::$(grep -v '^#' .github_release_version)"
       - name: Create asset release
+        if: github.event_name == 'push'
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -58,6 +64,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload asset release
+        if: github.event_name == 'push'
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -71,9 +78,11 @@ jobs:
           BUILD_TAG="dashboard_ui" scripts/embed_ui_assets.sh
           cp pkg/uiserver/embedded_assets_handler.go embedded_assets_handler.go
       - name: Pack embedded assets
+        if: github.event_name == 'push'
         run: |
           zip -r embedded-assets-golang.zip ./embedded_assets_handler.go
       - name: Upload embedded asset release
+        if: github.event_name == 'push'
         uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
