--- a/.github/workflows/release-ui-assets.yaml
+++ b/.github/workflows/release-ui-assets.yaml
@@ -39,15 +39,13 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      # Skip post-install scripts by `--ignore-scripts` here,
-      # as a malicious script could steal NODE_AUTH_TOKEN.
-      - name: Yarn install from private registry
+      - name: Yarn install from Github package
         run: make yarn_dependencies
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build UI
         run: |
-          SKIP_YARN_INSTALL=1 DASHBOARD_API="/dashboard" make ui
+          make ui
       - name: Pack UI asset release
         if: github.event_name == 'push'
         working-directory: ui/build
