--- a/ui/package.json
+++ b/ui/package.json
@@ -3,22 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@pingcap-incubator/pd-client-js": "^0.1.5",
     "antd": "^3.26.5",
-    "antd-dayjs-webpack-plugin": "^0.0.7",
     "axios": "^0.19.0",
-    "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "react": "^16.12.0",
-    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "typescript": "^3.7.4",
-    "@pingcap-incubator/pd-client-js": "^0.1.5"
+    "react-router-dom": "^5.1.2",
+    "single-spa": "^4.4.2",
+    "single-spa-react": "^2.11.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -44,6 +36,15 @@
     ]
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2"
+    "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
+    "@types/react-router-dom": "^5.1.3",
+    "antd-dayjs-webpack-plugin": "^0.0.8",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "react-app-rewired": "^2.1.5",
+    "react-scripts": "3.1.x",
+    "typescript": "^3.7.4"
   }
 }
