--- a/ui/package.json
+++ b/ui/package.json
@@ -6,9 +6,13 @@
     "@pingcap-incubator/pd-client-js": "^0.1.5",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
+    "d3": "^5.15.0",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "single-spa": "^4.4.2",
     "single-spa-react": "^2.11.0"
   },
@@ -37,6 +41,9 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^1.0.8-4.2.2",
+    "@types/d3": "^5.7.2",
+    "@types/node": "^13.1.5",
+    "@types/react": "^16.9.17",
     "@types/react-router-dom": "^5.1.3",
     "antd-dayjs-webpack-plugin": "^0.0.8",
     "babel-plugin-import": "^1.13.0",
