--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -20,8 +20,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "baseUrl": "src"
+    "jsx": "react"
   },
   "include": [
     "src"
