Integrate KeyVis UI (#10)
* A more detailed front-end architecture

Signed-off-by: Breezewish <me@breeswish.org>

* Fix some lint issues

Signed-off-by: Breezewish <me@breeswish.org>

* Bump version

Signed-off-by: Breezewish <me@breeswish.org>

* Copy KeyVis into Dashboard (and fix the KeyVis performance issue)

Signed-off-by: Breezewish <me@breeswish.org>

* Fix incorrect z-index

Signed-off-by: Breezewish <me@breeswish.org>

* Fix merge issues

Signed-off-by: Breezewish <me@breeswish.org>

* Fix merge issues

Signed-off-by: Breezewish <me@breeswish.org>

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -8,9 +9,10 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": false,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
@@ -18,8 +20,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "target": "es5"
+    "jsx": "react"
   },
   "include": [
     "src"
