--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@pingcap-incubator/pd-client-js": "^0.1.5",
+    "@types/lodash": "^4.14.149",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "d3": "^5.15.0",
