--- a/.github/workflows/build-dashboard.yaml
+++ b/.github/workflows/build-dashboard.yaml
@@ -29,4 +29,5 @@ jobs:
           make dev
       - name: Check uncommitted lint changes
         run: |
-          git diff-index --quiet HEAD --
+          git diff
+          # git diff-index HEAD --
