Use git diff instead of git diff-index
Signed-off-by: Breezewish <me@breeswish.org>

--- a/.github/workflows/build-dashboard.yaml
+++ b/.github/workflows/build-dashboard.yaml
@@ -29,4 +29,4 @@ jobs:
           make dev
       - name: Check uncommitted lint changes
         run: |
-          git diff-index --quiet HEAD --
+          git diff --exit-code
