--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ cmake-build-*/
 # IntelliJ
 out/
 
+# VSCode
+.vscode/
+
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
@@ -53,3 +56,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Retool
+/.retools/
