--- a/ui/package.json
+++ b/ui/package.json
@@ -8,8 +8,10 @@
     "@types/lodash": "^4.14.149",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "d3": "^5.15.0",
     "i18next": "^19.1.0",
+    "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
