--- a/ui/package.json
+++ b/ui/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@baurine/grafana-value-formats":"^0.1.1",
+    "@baurine/grafana-value-formats": "^0.1.1",
     "@pingcap-incubator/pd-client-js": "^0.1.5",
     "@types/lodash": "^4.14.149",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "d3": "^5.15.0",
+    "i18next": "^19.1.0",
+    "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.2",
     "react-router-dom": "^5.1.2",
     "single-spa": "^4.4.2",
     "single-spa-react": "^2.11.0"
@@ -50,6 +54,7 @@
     "customize-cra": "^0.9.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "react-app-rewire-yaml": "^1.1.0",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "3.1.x",
     "typescript": "^3.7.4"
