--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "d3": "^5.15.0",
+    "echarts": "^4.6.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "lodash": "^4.17.15",
