--- a/ui/package.json
+++ b/ui/package.json
@@ -54,6 +54,7 @@
     "antd-dayjs-webpack-plugin": "^0.0.8",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "lerna": "^3.20.2",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react-app-rewire-yaml": "^1.1.0",
