--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@baurine/grafana-value-formats": "^0.1.1",
     "@g07cha/flexbox-react": "^5.0.0",
+    "@pingcap-incubator/statement": "0.0.1",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
