--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -18,17 +18,31 @@
   },
   "dependencies": {},
   "peerDependencies": {
+    "@baurine/grafana-value-formats": "^0.1.1",
+    "antd": "^3.26.5",
+    "i18next": "^19.1.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "@baurine/grafana-value-formats": "^0.1.1",
     "@svgr/rollup": "^2.4.1",
     "@types/react": "^16.9.22",
+    "antd": "^3.26.5",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.1.4",
+    "i18next": "^19.1.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.2",
+    "react-router-dom": "^5.1.2",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
