--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -10,6 +10,8 @@
     "@rollup/plugin-typescript": "^4.0.0",
     "@rollup/plugin-yaml": "^2.1.0",
     "rollup": "^1.29.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-postcss": "^2.4.1",
     "tslib": "^1.9.3",
     "typescript": "^3.7.4"
   },
