--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -4,6 +4,17 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "dependencies": {},
+  "peerDependencies": {
+    "@baurine/grafana-value-formats": "^0.1.1",
+    "antd": "^3.26.5",
+    "i18next": "^19.1.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.2",
+    "react-router-dom": "^5.1.2"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
@@ -13,7 +24,17 @@
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^2.4.1",
     "tslib": "^1.9.3",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "@baurine/grafana-value-formats": "^0.1.1",
+    "antd": "^3.26.5",
+    "i18next": "^19.1.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.2",
+    "react-router-dom": "^5.1.2",
+    "@types/react": "^16.9.22"
   },
   "scripts": {
     "build": "rollup -c",
