--- a/ui/packages/statement/package.json
+++ b/ui/packages/statement/package.json
@@ -32,6 +32,7 @@
     "rollup": "^1.29.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^2.4.1",
+    "rollup-plugin-typescript2": "^0.26.0",
     "tslib": "^1.9.3",
     "typescript": "^3.7.4"
   },
