--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
   ],
   "dependencies": {
     "@g07cha/flexbox-react": "^5.0.0",
+    "@pingcap-incubator/dashboard_client": "0.0.1",
     "@pingcap-incubator/statement": "0.0.1",
     "antd": "^3.26.5",
     "axios": "^0.19.0",
