--- a/ui/packages/dashboard_client/package.json
+++ b/ui/packages/dashboard_client/package.json
@@ -12,8 +12,7 @@
   },
   "scripts": {
     "gen_api": "openapi-generator generate -i swagger.yaml -g typescript-axios -c .openapi_config.yaml -o src",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
+    "build": "yarn run gen_api && rollup -c",
     "prepare": "yarn run build",
     "clean": "rimraf dist"
   },
