--- a/ui/packages/dashboard_client/package.json
+++ b/ui/packages/dashboard_client/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "gen_api": "openapi-generator generate -i swagger.yaml -g typescript-axios -c .openapi_config.yaml -o src/api",
     "build": "yarn run gen_api && rollup -c",
+    "watch": "yarn run gen_api && rollup -c -w",
     "clean": "rimraf dist",
     "p": "yarn publish"
   },
